# Real_estate_AI_vscode

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
app/: main.py
app/api/v1/: session.py
app/models/: session.py
app/services/: session_service.py
templates/: form.html  index.html
